# waldo

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile.precommit  LICENSE  Makefile  README.md  alembic.ini  docker-compose.docs.yml  docker-compose.precommit.yml  docker-compose.yml  install.cmd  install.ps1  install.sh  pyproject.toml  ruff.toml
.github/workflows/: docs.yml  test.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_phase2_schema.py  003_phase3_training.py  004_collections_multiclass.py  6898fd9aa48c_add_name_column_to_labeling_jobs.py  7a1b2c3d4e5f_add_version_parent_to_labeling_jobs.py  8b2c3d4e5f6a_add_minio_key_to_demo_feedback.py  9c3d4e5f6a7b_add_tags_notes_to_training_runs.py  a1b2c3d4e5f6_add_deployment_targets_inference_logs.py  b2c3d4e5f6a7_add_model_alias_and_experiments.py  c3d4e5f6a7b8_add_comparison_runs.py  d4e5f6a7b8c9_perf_indexes.py  e5f6a7b8c9d0_add_auth_and_workflow_tables.py  f6a7b8c9d0e1_add_loss_history_to_training_runs.py
app/: Dockerfile  main.py  ws.py
app/api/: admin.py  agent.py  auth.py  download.py  feedback.py  frames.py  label.py  review.py  serve.py  status.py  train.py  upload.py  workflows.py  workspaces.py
docs/: WALKTHROUGH.md  frontend-guide.md  plan-upstream-pr-score-first-masks.md  plan-waldo-score-first-masks.md
docs-site/: .gitignore  Dockerfile  README.md  docusaurus.config.ts  package-lock.json  package.json  playwright.config.ts  sidebars.ts
docs-site/docs/: intro.md
docs-site/docs/api/: admin.md  auth.md  label.md  overview.md  review.md  serve.md  train.md  upload.md  workflows.md
docs-site/docs/architecture/: codebase-map.md  data-model.md  overview.md  security.md
docs-site/docs/deployment/: docker.md  edge.md  linux.md  windows.md
docs-site/docs/development/: contributing.md  precommit.md  setup.md  testing.md
docs-site/docs/getting-started/: configuration.md  installation.md  quickstart.md
docs-site/docs/ui/: agent.md  dashboard.md  datasets.md  deploy.md  label.md  overview.md  (+4 more)
docs-site/scripts/: build-codebase-map.py  recordings.spec.ts  screenshots.spec.ts
docs-site/static/: codebase-map.html  codebase-map.json
experiments/sam3_autoresearch/: analysis.ipynb  prepare.py  program.md  pyproject.toml  results.tsv  train.py
install/lib/: detect.sh  env.sh  log.sh  prereqs.sh
labeler/: Dockerfile.apple  Dockerfile.nvidia  exemplar_labeler.py  frame_extractor.py  pipeline.py  sam3_engine.py  sam3_optimized.py  text_labeler.py  video_labeler.py
labeler/converters/: common.py  to_classify.py  to_detect.py  to_obb.py  to_pose.py  to_segment.py
lib/: auth.py  config.py  db.py  frame_cache.py  inference_engine.py  migration_helpers.py  storage.py  tasks.py  video_tracker.py  workflow_engine.py
lib/agent/: __init__.py  graph.py  mlx_agent.py  tools.py
lib/workflow_blocks/: __init__.py  base.py  classical_cv.py  crop.py  detection.py  filter_block.py  io.py  llm.py  logic.py  platform.py  specialized.py  visualization.py
scripts/: dev.sh  download_models.sh  entrypoint-app.sh  entrypoint-worker.sh  purge_models.py  reset_admin.py  setup.sh
tests/: conftest.py  test_agent.py  test_api.py  test_api_extended.py  test_auth.py  test_converters.py  test_e2e.py  test_e2e_full.py  test_frame_extractor.py  test_inference.py  test_migrations.py  test_score_first_masks.py  test_trainer.py
trainer/: Dockerfile.apple  Dockerfile.nvidia  dataset_builder.py  exporter.py  metrics_streamer.py  notifiers.py  train_manager.py
ui/: .prettierignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/e2e/: screenshots.spec.ts  waldo.spec.ts
ui/src/: api.ts  index.css  main.tsx
(+55 files in other folders)
