[project]
name = "waldo"
version = "0.1.0"
description = "SAM 3 + YOLO auto-labeling pipeline"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg2-binary",
    "redis",
    "minio",
    "celery[redis]",
    "pydantic>=2.0",
    "pydantic-settings",
]

[dependency-groups]
app = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
]
labeler = [
    "transformers>=4.47",
    "torch>=2.5",
    "Pillow",
    "opencv-python-headless",
    "imagehash",
    "numpy",
    "torchvision>=0.25.0",
    "kernels>=0.12.2",
    # MLX path (Apple Silicon only) — SAM 3.1 native via mlx-vlm.
    # Platform marker keeps the Linux Docker labeler build from pulling these.
    "mlx>=0.20; platform_system=='Darwin'",
    "mlx-vlm>=0.4.4; platform_system=='Darwin'",
]
trainer = [
    "ultralytics",
    "lapx",
    "requests",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pre-commit>=3.7",
    "ruff>=0.6",
    "detect-secrets>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib", "app", "labeler", "trainer"]

[tool.uv]
default-groups = ["app", "labeler", "trainer", "dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["docs-site", "ui", "**/migrations"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "S",             # bandit (security)
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # FastAPI Depends() in defaults
    "S101",   # assert (used in tests)
    "S104",   # 0.0.0.0 binds (intentional in containers)
    "S105", "S106", "S107",  # hardcoded password defaults — checked at runtime instead
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]
"alembic/**" = ["I", "F"]

[tool.ruff.format]
quote-style = "double"
