[project]
name = "sam3-autoresearch"
version = "0.1.0"
description = "Autoresearch: optimize SAM3.1 MLX inference for surveillance camera labeling"
requires-python = ">=3.11"
dependencies = [
    "mlx>=0.24.0",
    "mlx-vlm>=0.2.0",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
